# LLMOps-Travel-Itinerary-Planner

./: Dockerfile  README.md  app.py  elasticsearch.yaml  filebeat.yaml  k8s-deployment.yaml  kibana.yaml  logstash.yaml  main.py  pyproject.toml  requirements.txt  setup.py
src/: README.md
src/chains/: README.md  itinerary_chain.py
src/config/: README.md  config.py
src/core/: README.md  planner.py
src/utils/: README.md
